{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 11,
  "lineage": "e0bc9f2f-7a2d-b245-55e4-8dbf5a30487d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:internet-gateway/igw-066491c60ab43148a",
            "id": "igw-066491c60ab43148a",
            "owner_id": "610718856890",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-igw-dev",
              "Project": "network-visibility"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-igw-dev",
              "Project": "network-visibility"
            },
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-066491c60ab43148a",
            "id": "r-rtb-0759b8e7719c2006e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0759b8e7719c2006e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:route-table/rtb-0759b8e7719c2006e",
            "id": "rtb-0759b8e7719c2006e",
            "owner_id": "610718856890",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-public-rt-dev",
              "Project": "network-visibility"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-public-rt-dev",
              "Project": "network-visibility"
            },
            "timeouts": null,
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2608fc2cd2da231",
            "route_table_id": "rtb-0759b8e7719c2006e",
            "subnet_id": "subnet-005db386efbbfd330"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ff1f5ca3a8b171f",
            "route_table_id": "rtb-0759b8e7719c2006e",
            "subnet_id": "subnet-0aeacf40c0c9d2d85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:subnet/subnet-0d7d4720b9812e99c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d4720b9812e99c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610718856890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-private-subnet-1a-dev",
              "Project": "network-visibility",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-private-subnet-1a-dev",
              "Project": "network-visibility",
              "Type": "Private"
            },
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:subnet/subnet-098e32e7cd909e16f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098e32e7cd909e16f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "610718856890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-private-subnet-1c-dev",
              "Project": "network-visibility",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-private-subnet-1c-dev",
              "Project": "network-visibility",
              "Type": "Private"
            },
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:subnet/subnet-005db386efbbfd330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005db386efbbfd330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610718856890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-public-subnet-1a-dev",
              "Project": "network-visibility",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-public-subnet-1a-dev",
              "Project": "network-visibility",
              "Type": "Public"
            },
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:subnet/subnet-0aeacf40c0c9d2d85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeacf40c0c9d2d85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "610718856890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-public-subnet-1c-dev",
              "Project": "network-visibility",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-public-subnet-1c-dev",
              "Project": "network-visibility",
              "Type": "Public"
            },
            "vpc_id": "vpc-03929123dcf05e7f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:610718856890:vpc/vpc-03929123dcf05e7f3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077d80454aadc1144",
            "default_route_table_id": "rtb-0fbacc0d7aec37af8",
            "default_security_group_id": "sg-0f9c7f2457dddae95",
            "dhcp_options_id": "dopt-0e08a373b816f29a8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03929123dcf05e7f3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fbacc0d7aec37af8",
            "owner_id": "610718856890",
            "tags": {
              "Environment": "dev",
              "Name": "network-visibility-vpc-dev",
              "Project": "network-visibility"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "network-visibility-vpc-dev",
              "Project": "network-visibility"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}